--- a/.ebextensions/nginx_proxy.config
+++ b/.ebextensions/nginx_proxy.config
@@ -28,3 +28,9 @@ files:
     group: root
     content : |
       mv /etc/nginx/conf.d/00_elastic_beanstalk_proxy.conf /etc/nginx/conf.d/00_elastic_beanstalk_proxy.conf.old
+  "/etc/nginx/conf.d/gzip.conf":
+    content: |
+      gzip on;
+      gzip_comp_level 4;
+      gzip_types text/plain text/html text/css application/javascript;
+      gzip_vary on;
