--- a/.ebextensions/nginx_proxy.config
+++ b/.ebextensions/nginx_proxy.config
@@ -32,5 +32,5 @@ files:
     content: |
       gzip on;
       gzip_comp_level 4;
-      gzip_types text/plain text/html text/css application/javascript image/png;
+      gzip_types text/plain text/css application/javascript image/png;
       gzip_vary on;
