--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "start:prod": "NODE_ENV=production node index.js >> nodejs.log &"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
